// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CredentialInputScreen renders correctly in login mode 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 25,
        "borderBottomRightRadius": 25,
        "borderTopLeftRadius": 25,
        "borderTopRightRadius": 25,
        "flexDirection": "column",
        "justifyContent": "center",
        "marginLeft": 10,
        "marginRight": 10,
        "maxHeight": 530,
        "maxWidth": 369,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="foo@bar.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      or
    </Text>
    <Connect(GoogleAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Sign in with Google"
    />
    <Connect(FacebookAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Continue with Facebook"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly in sign up mode 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 25,
        "borderBottomRightRadius": 25,
        "borderTopLeftRadius": 25,
        "borderTopRightRadius": 25,
        "flexDirection": "column",
        "justifyContent": "center",
        "marginLeft": 10,
        "marginRight": 10,
        "maxHeight": 530,
        "maxWidth": 369,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign Up for Civic
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="foo@bar.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="password"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder="Re-type password"
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      or
    </Text>
    <Connect(GoogleAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Sign up with Google"
    />
    <Connect(FacebookAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Continue with Facebook"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Have an account? Sign in
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly when loading 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 25,
        "borderBottomRightRadius": 25,
        "borderTopLeftRadius": 25,
        "borderTopRightRadius": 25,
        "flexDirection": "column",
        "justifyContent": "center",
        "marginLeft": 10,
        "marginRight": 10,
        "maxHeight": 530,
        "maxWidth": 369,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="email@email.com"
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      or
    </Text>
    <Connect(GoogleAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Sign in with Google"
    />
    <Connect(FacebookAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Continue with Facebook"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;

exports[`CredentialInputScreen renders correctly with form error 1`] = `
<Component
  style={
    Object {
      "backgroundColor": "#2d9cdb",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
      "paddingBottom": 10,
      "paddingTop": 10,
    }
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderBottomLeftRadius": 25,
        "borderBottomRightRadius": 25,
        "borderTopLeftRadius": 25,
        "borderTopRightRadius": 25,
        "flexDirection": "column",
        "justifyContent": "center",
        "marginLeft": 10,
        "marginRight": 10,
        "maxHeight": 530,
        "maxWidth": 369,
        "paddingBottom": 20,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "marginBottom": 20,
          "textAlign": "left",
        }
      }
    >
      Sign in
    </Text>
    <EmailInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value=""
    />
    <PasswordInput
      onChangeText={[MockFunction]}
      placeholder={undefined}
      value="password"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#eb5757",
          "fontSize": 16,
          "paddingBottom": 4,
          "paddingTop": 4,
          "textAlign": "center",
        }
      }
    >
      Email required
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#126390",
          "fontSize": 18,
          "paddingTop": 20,
          "textAlign": "right",
        }
      }
    >
      SUBMIT
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      or
    </Text>
    <Connect(GoogleAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Sign in with Google"
    />
    <Connect(FacebookAuthButton)
      style={
        Object {
          "alignSelf": "center",
          "marginBottom": 8,
          "marginLeft": 0,
          "marginRight": 0,
          "maxWidth": 322,
          "width": "100%",
        }
      }
      title="Continue with Facebook"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "fontSize": 18,
          "paddingBottom": 20,
          "paddingTop": 10,
          "textAlign": "center",
        }
      }
    >
      Don't have an account yet? Register
    </Text>
  </Component>
</Component>
`;
